add issue7 aritcle 6

--- a/issue7/article05/2022-02-21.mdx
+++ b/issue7/article05/2022-02-21.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'Study of Some Nigerian Art Music Compositions, Towards A Theory of Supplicative Musicology'
 slug: towards-theory-of-supplicative-musicology
-description: ''
-authors: []
+description: 'The strong need for supplication to higher authorities or deities has been a key part of people’s life since the creation of humans. In African religions and all the modern-day religions (Christianity, Islam etc.), supplication is a major part of their religious practices. Adherents of those religions are encouraged to take part in corporate prayers, they are further encouraged to have a quiet time with their maker.'
+authors: [kayodem]
 tags:
   [
     Supplication,
